menghapus baris kode yang tidak berfungsi dengan baik

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <!--Akhir Contact-->
 
     <!--Footer-->
-    <footer class="text-white text-center p-4" style="background-color: #0ad663">
+    <footer class="text-center p-4" style="background-color: #0ad663">
       <!--p-4 untuk padding 4-->
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> <a href="https://www.instagram.com/ulyana_alfiani/" class="text-white fw-bold">by Ulyana Alfiani</a></p>
     </footer>
